--- a/custom-apps/sample-app-refresh/public/index.html
+++ b/custom-apps/sample-app-refresh/public/index.html
@@ -4,12 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <meta
+      name="description"
+      content="Sample App"
+    />
     <title>Sample App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <div id="assetEmbed"></div>
   </body>
 </html>
